tests/templates/ekscluster/01-full-nginx/baseline/manifests/auth/resources/ingress-infra.yml
# Copyright (c) 2017-present SIGHUP s.r.l All rights reserved.
# Use of this source code is governed by a BSD-style
# license that can be found in the LICENSE file.---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    

  name: dex
  namespace: kube-system
spec:
  # Needs to be externally available in order to act as callback from GitHub.
  ingressClassName: external
  rules:
    - host: login.example.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: dex
                port:
                  name: http
  tls:
    - hosts:
      - login.example.com
